Revert "Add preferred name question (#27)"
This reverts commit d6802c9aac2b30fc14641937718d5837fe9bc3ab.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -35,7 +35,7 @@
     <a href="/auth/emails/qts-email">Email - access your QTS cert</a>
   </p>
   <p>
-    <a href="/invite/14f71042-3fc3-4671-98d7-bf9b117d5583">New invite link - Jessica Smith</a>
+    <a href="/invite/14f71042-3fc3-4671-98d7-bf9b117d5583">New invite link - Victoria s mith</a>
   </p>
   <p>
     <a href="/invite/98610705-d34c-4282-8480-45646ed5cfe1">New invite link - Sarah Jane Smith</a>
