--- a/app/views/account/_summary-card.html
+++ b/app/views/account/_summary-card.html
@@ -1,5 +1,5 @@
 {% set officialName %}
-  {{ data.user | getFullName }}
+  {{ data.dqtName }}
   <p class="govuk-hint govuk-!-font-size-14">Displayed on teaching certificates </p>
   {% if data['nameLozenge'] %}
  {% include '_includes/_lozenge.html' %}
@@ -23,18 +23,13 @@
 {% endset %}
 
 {% set verifiedDOB %}
-  {{ data.dob | isoDateFromDateInput | govukDate if data['dob'] else '1 December 1989' }}
-{% endset %}
-
-{% set middleNamesHtml %}
-  {% if data.user.middleNames %}
-    {{data.user.middleNames}}
-  {% else %}
-    <span class="govuk-hint">Not provided</span>
+{{ data.dob | isoDateFromDateInput | govukDate if data['dob'] else '1 December 1989' }}
+  {% if data['verifiedDob'] == 'true' %}
+  <p class="govuk-hint govuk-!-font-size-14">Your verified date of birth.</p>
   {% endif %}
 {% endset %}
 
-<h3 class="govuk-heading-m">Teaching record</h3>
+<h3 class="govuk-heading-m">Personal details</h3>
 
 {{ govukSummaryList({
   classes: "govuk-!-margin-bottom-9",
@@ -42,7 +37,21 @@
   rows: [
   {
     key: {
-      html: 'Full name'
+      html: 'Name'
+    },
+    value: {
+      html: data['fullName'] if data['firstName'] else 'Ria Smith'
+    },
+    actions: {
+      items: [{
+        text: 'Change',
+        href: "name"
+      }]
+    }
+  },
+  {
+    key: {
+      html: 'Official name'
     },
     value: {
       html: officialName
@@ -53,52 +62,7 @@
         href: "name-dqt-overview"
       }]
     } if data['nameLozenge'] != "show"
-  } if data['showDqtName'] == "show" and false,
-  {
-    key: {
-      html: 'First names'
-    },
-    value: {
-      html: data.user.firstNames
-    },
-    actions: {
-      items: [{
-        text: 'Change',
-        href: "name",
-        visuallyHiddenText: "first names"
-      }]
-    }
-  },
-  {
-    key: {
-      html: 'Middle names'
-    },
-    value: {
-      html: middleNamesHtml
-    },
-    actions: {
-      items: [{
-        text: 'Change',
-        href: "name",
-        visuallyHiddenText: "middle names"
-      }]
-    }
-  },
-  {
-    key: {
-      html: 'Last names'
-    },
-    value: {
-      html: data.user.lastNames
-    },
-    actions: {
-      items: [{
-        text: 'Change',
-        href: "name",
-        visuallyHiddenText: "last names"
-      }]
-    }
-  },
+  } if data['showDqtName'] == "show",
   {
     key: {
       html: 'Date of birth'
@@ -111,7 +75,7 @@
         text: 'Change',
         href: "date-of-birth"
       }]
-    }
+    } if data['verifiedDob'] == "false"
   } if data['showDqtDob'] != "show",
   {
     key: {
@@ -144,84 +108,60 @@
   ]
 }) }}
 
-<h3 class="govuk-heading-m">Account details</h3>
-{% set preferredNameHtml %}
-  {% if data.user.preferredName %}
-    {{data.user.preferredName}}
-  {% else %}
-    <span class="govuk-hint">Not provided</span>
-  {% endif %}
-{% endset %}
+<h3 class="govuk-heading-m">Sign in details</h3>
 
 {{ govukSummaryList({
   classes: "govuk-!-margin-bottom-9",
   titleText: "Personal details",
   rows: [
-    {
-      key: {
-        html: 'Preferred name'
-      },
-      value: {
-        html: preferredNameHtml
-      },
-      actions: {
-        items: [{
-          text: 'Change',
-          href: "preferred-name",
-          visuallyHiddenText: "preferredName"
-        }]
-      }
+  {
+    key: {
+      html: 'Email'
     },
-    {
-      key: {
-        html: 'Email'
-      },
-      value: {
-        html: data.user.email
+    value: {
+      html: data['email'] if data['email'] else 'email@example.com'
 
-      },
-      actions: {
-        items: [{
-          text: 'Change',
-          href: "email"
-        }]
-      }
     },
-    {
-      key: {
-        html: 'Mobile number'
-      },
-      value: {
-        html: data.user.phone
-
-      },
-      actions: {
-        items: [{
-          text: 'Change',
-          href: "phone"
-        }]
-      }
+    actions: {
+      items: [{
+        text: 'Change',
+        href: "email"
+      }]
     }
-    ]
-  }) }}
-{# {% if data['showDqtDob'] == "show" or data['showDqtName'] == "show" %} #}
-{% if data.user.trn %}
+  },
+  {
+    key: {
+      html: 'Mobile number'
+    },
+    value: {
+      html: data['phone'] if data['phone'] else '07827999617'
 
-  <h3 class="govuk-heading-m">Teacher reference number (TRN)</h3>
-
-  {{ govukSummaryList({
-    classes: "govuk-!-margin-bottom-9",
-    titleText: "Personal details",
-    rows: [
-    {
-      key: {
-        html: 'TRN'
-      },
-      value: {
-        html: data.user.trn
-
-      }
+    },
+    actions: {
+      items: [{
+        text: 'Change',
+        href: "phone"
+      }]
     }
-    ]
-  }) }}
+  }
+  ]
+}) }}
+{% if data['showDqtDob'] == "show" or data['showDqtName'] == "show" %}
+<h3 class="govuk-heading-m">Teacher reference number (TRN)</h3>
+
+{{ govukSummaryList({
+  classes: "govuk-!-margin-bottom-9",
+  titleText: "Personal details",
+  rows: [
+  {
+    key: {
+      html: 'TRN'
+    },
+    value: {
+      html: data['trn'] if data['trn'] else '1851018'
+
+    }
+  }
+  ]
+}) }}
 {% endif %}
