Update other choice label

--- a/app/views/_includes/forms/update-preferred-name.html
+++ b/app/views/_includes/forms/update-preferred-name.html
@@ -42,7 +42,7 @@
     } if fullName != shortName,
     {
       value: "custom",
-      text: "Other",
+      text: "Use a different preferred name",
       conditional: {
         html: freeTextInput
       },
