--- a/app/views/auth/_ga-account.html
+++ b/app/views/auth/_ga-account.html
@@ -13,8 +13,7 @@
   {{ govukButton({
     text: 'Create an account',
     classes: "app-button--inverse",
-    href: accountPath,
-    href: '/auth/start'
+    href: accountPath
   }) }}
 
   <h1 class="govuk-heading-m">Already have an account?</h1>
