--- a/app/views/account/account-details.html
+++ b/app/views/account/account-details.html
@@ -1,4 +1,4 @@
-{% extends "_layouts/forms.html" %}
+{% extends "layouts/forms.html" %}
 {% set title = "Your details" %}
 {% set showSubheader = true %}
 {% set subHeader = data.tsa %}
