--- a/app/views/auth/check-answers.html
+++ b/app/views/auth/check-answers.html
@@ -1,5 +1,6 @@
 {% extends "layouts/forms.html" %}
 {% set title = "Confirm your details" %}
+{% set buttonText = 'Create account' %}
 
 {% block form %}
       {% include '../auth/_summary-card.html' %}
