do you have a TRN question update to include link to guidance

--- a/app/views/auth/have-trn.html
+++ b/app/views/auth/have-trn.html
@@ -19,6 +19,9 @@
   </li>
 </ul>
 
+<p><a href="https://www.gov.uk/guidance/teacher-reference-number-trn">Learn about TRNs</a> including how to check if you have one or request one.</p>
+<p>You may not have one yet if you work in early years, further education or qualified as a teacher outside of England. </p>
+
 {{ govukRadios({
   name: "have-trn",
   id: "have-trn",
